<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#318035"
        android:gravity="center"
        android:textSize="10pt"
        android:text="@string/title" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a" />

        <EditText
            android:id="@+id/soa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b" />

        <EditText
            android:id="@+id/sob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </LinearLayout>
    <TextView
        android:id="@+id/kq"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textSize="25dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:hint="Kết quả..."
        android:background="@android:color/holo_green_dark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/tong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tong" />

        <Button
            android:id="@+id/hieu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hieu" />

        <Button
            android:id="@+id/tich"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tich" />

        <Button
            android:id="@+id/thuong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thuong" />

        <Button
            android:id="@+id/uscln"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uscln" />

        <Button
            android:id="@+id/thoat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thoat"
            android:textColor="@android:color/holo_red_dark" />
    </LinearLayout>
</LinearLayout>